organisation id is removed in test iipm member table

--- a/wp-content/themes/ipm/css/enhanced-iipm-portal.css
+++ b/wp-content/themes/ipm/css/enhanced-iipm-portal.css
@@ -1244,5 +1244,5 @@ input[type="checkbox"]:disabled:checked {
 /* Make the membership type options more prominent */
 .form-section:first-of-type .form-group {
   max-width: 600px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
