--- a/wp-content/themes/ipm/css/iipm-portal.css
+++ b/wp-content/themes/ipm/css/iipm-portal.css
@@ -1012,7 +1012,7 @@
 /* Bulk Import Styles */
 .page-header {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px !important;
 }
 
 .page-header h1 {
